src/patterns/kis-widget/_kis-widget.scss
/*********************************/
/* BEGIN Pattern: kis-widget     */
/*********************************/

.kis-widget {
    border: 0px none transparent;
    height: 160px;
    margin-top: 15px;
    overflow: hidden;
    width: 100%;
}

.subject-popover .popover {
    max-width: 645px;
}

.honours-degree-column {
    margin-bottom: 0;
}

.honours-degree-item {
    margin-right: 30px;
    padding-bottom: 4px;
}

.honours-degree-item button {
    border-radius: 4px;
    font-size: 14px;
    margin-top: 4px;
    padding: 0 6px;
}

div.course.kis-widget-red {
    background-color: rgb(221, 49, 44);
    padding: 0;
}

@media screen and (max-width: 600px) {
    .kis-widget {
        height: 500px;
    }

    .subject-popover .popover-content {
        padding: 9px 7px;
    }

    .honours-degree-item {
        margin-right: 20px;
    }
}

/*********************************/
/* END Pattern: kis-widget       */
/*********************************/

